--- a/ja/cv.html
+++ b/ja/cv.html
@@ -86,7 +86,7 @@
 <dl>
 <dt>2021年4月--</dt>
 <dd>論文誌 JSIAM Letters 編集委員</dd>
-<dt>2019年7月--</dt>
+<dt>2019年7月--2024年6月</dt>
 <dd>数値解析シンポジウム 実行委員</dd>
 <dt>2019年7月--2023年3月</dt>
 <dd>日本応用数理学会 「若手の会」研究部会 運営委員</dd>
@@ -106,13 +106,15 @@
 <dd>東京大学大学院情報理工学系研究科長賞</dd>
 <dt>2015年6月</dt>
 <dd>日本応用数理学会 第11回 若手優秀講演賞</dd>
-<dt>2014年3月</dt>
 <dd>東京大学工学部長賞</dd>
 </ul>
 
 <h2>研究助成</h2>
 <dl>
-<dt>2022年4月--2027年3月</dt>
+<dt>2024年6月--2027年3月</dt>
+<dd><a href="https://kaken.nii.ac.jp/ja/grant/KAKENHI-PROJECT-24K22290/" target="_blank">最適化や深層学習のための最良力学系の探究</a></dd>
+<dd>科研費 挑戦的研究(萌芽) (課題番号：24K22290)：分担</dd>
+<dt>2022年4月--2028年3月</dt>
 <dd><a href="https://kaken.nii.ac.jp/ja/grant/KAKENHI-PROJECT-22K13955/" target="_blank">微分代数方程式に対する高速な構造保存数値解法の構築</a></dd>
 <dd>科研費 若手研究 (課題番号：22K13955)：代表</dd>
 <dt>2020年4月--2024年3月</dt>
