update cv in English

--- a/cv.html
+++ b/cv.html
@@ -75,7 +75,7 @@
 <dl>
 <dt>Apr. 2019--</dt>
 <dd>"Exercise of Analysis for Mathematical Engineering", Exercise 1B in Mathematical Information Engineering, Department of Mathematical Engineering and Information Physics, Faculty of Engineering, The University of Tokyo.</dd>
-<dt>Apr. 2019--</dt>
+<dt>Apr. 2019--Jun. 2024</dt>
 <dd>Experiment 2 in Mathematical Information Engineering, Department of Mathematical Engineering and Information Physics, Faculty of Engineering, The University of Tokyo.</dd>
 <dt>Apr. 2019--Mar. 2020</dt>
 <dd>"Numerical Methods", Experiment 1 in Mathematical Information Engineering, Department of Mathematical Engineering and Information Physics, Faculty of Engineering, The University of Tokyo.</dd>
@@ -83,6 +83,8 @@
 
 <h2>Awards</h2>
 <dl>
+<dt>Jul. 2023</dt>
+<dd>Award for an Excellent Paper in JSIAM Letters, The Japan Society for Industrial and Applied Mathematics </dd>
 <dt>Jun. 2016</dt>
 <dd>EASIAM student paper prize, SIAM: East Asian Section Conference 2016 (1st prize)</dd>
 <dt>Mar. 2016</dt>
