--- a/ja/cv.html
+++ b/ja/cv.html
@@ -114,7 +114,10 @@
 <dt>2024年6月--2027年3月</dt>
 <dd><a href="https://kaken.nii.ac.jp/ja/grant/KAKENHI-PROJECT-24K22290/" target="_blank">最適化や深層学習のための最良力学系の探究</a></dd>
 <dd>科研費 挑戦的研究(萌芽) (課題番号：24K22290)：分担</dd>
-<dt>2022年4月--2028年3月</dt>
+<dt>2024年4月--2028年3月</dt>
+<dd><a href="https://kaken.nii.ac.jp/ja/grant/KAKENHI-PROJECT-24K00540/" target="_blank">積型ニューラルネットワーク深層学習による数値解析的アルゴリズムの解析と創出</a></dd>
+<dd>科研費 基盤研究(B) (課題番号：24K00540)：分担</dd>
+<dt>2022年4月--2027年3月</dt>
 <dd><a href="https://kaken.nii.ac.jp/ja/grant/KAKENHI-PROJECT-22K13955/" target="_blank">微分代数方程式に対する高速な構造保存数値解法の構築</a></dd>
 <dd>科研費 若手研究 (課題番号：22K13955)：代表</dd>
 <dt>2020年4月--2024年3月</dt>
