--- a/ja/cv.html
+++ b/ja/cv.html
@@ -84,12 +84,15 @@
 
 <h2>学会活動</h2>
 <dl>
+<dt>2024年6月--</dt>
+<dd>論文誌 日本応用数理学会論文誌 編集委員</dd>  
 <dt>2021年4月--</dt>
 <dd>論文誌 JSIAM Letters 編集委員</dd>
 <dt>2019年7月--2024年6月</dt>
 <dd>数値解析シンポジウム 実行委員</dd>
 <dt>2019年7月--2023年3月</dt>
 <dd>日本応用数理学会 「若手の会」研究部会 運営委員</dd>
+
 <!--
   <dt>2018年6月</dt>
 <dd>EASIAM2018 Local Organizing Committee</dd>
