--- a/cv.html
+++ b/cv.html
@@ -62,7 +62,9 @@
 
 <h2>Employment</h2>
 <dl>
-<dt>Apr. 2019--present</dt>
+<dt>Apr. 2025--present</dt>
+<dd>Associate Professor, Tokyo Metropolitan University.</dd>
+<dt>Apr. 2019--Mar. 2025</dt>
 <dd>Assistant Professor, The University of Tokyo.</dd>
 <!--
 <dt>Apr. 2018--Mar. 2019</dt>
@@ -73,9 +75,9 @@
 
 <h2>Education</h2>
 <dl>
-<dt>Apr. 2019--</dt>
+<dt>Apr. 2019--Mar. 2025</dt>
 <dd>"Exercise of Analysis for Mathematical Engineering", Exercise 1B in Mathematical Information Engineering, Department of Mathematical Engineering and Information Physics, Faculty of Engineering, The University of Tokyo.</dd>
-<dt>Apr. 2019--Jun. 2024</dt>
+<dt>Apr. 2019--Mar. 2025</dt>
 <dd>Experiment 2 in Mathematical Information Engineering, Department of Mathematical Engineering and Information Physics, Faculty of Engineering, The University of Tokyo.</dd>
 <dt>Apr. 2019--Mar. 2020</dt>
 <dd>"Numerical Methods", Experiment 1 in Mathematical Information Engineering, Department of Mathematical Engineering and Information Physics, Faculty of Engineering, The University of Tokyo.</dd>
