--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
 
 
 <p>
-Assistant Professor,<br>
-Department of Mathematical Informatics,<br>
-Graduate School of Information Science and Technology,<br>
-The University of Tokyo, Bunkyo-ku, Tokyo, 113-8656, Japan<br>
-Email: shun (at) mist.i.u-tokyo.ac.jp<br>
+Associate Professor,<br>
+Department of Mathematical Sciences,<br>
+Graduate School of Science,<br>
+Tokyo Metropolitan University, 1-1 Minami-Osawa, Hachioji-shi, Tokyo, 192-0397, Japan<br>
+Email: shun_sato (at) tmu.ac.jp<br>
 <a href="https://scholar.google.co.jp/citations?user=SnL7aYgAAAAJ&hl=en" class="active">Google Scholar Profile</a>, <a href="https://orcid.org/0000-0002-8938-0825" class="active">ORCID</a>, <a href="https://researchmap.jp/shun_sato_ist?lang=en" class="active">Researchmap</a>
 </p>
 
