--- a/ja/cv.html
+++ b/ja/cv.html
@@ -64,7 +64,9 @@
 
 <h2>職歴</h2>
 <dl>
-<dt>2019年4月--</dt>
+<dt>2025年3月--</dt>
+<dd>東京都立大学大学院理学研究科 数理科学専攻 准教授</dd>
+<dt>2019年4月--2025年3月</dt>
 <dd>東京大学大学院情報理工学系研究科 数理情報学専攻 助教</dd>
 <dt>2018年4月--2019年3月</dt>
 <dd>東京大学大学院情報理工学系研究科 数理情報学専攻 技術補佐員</dd>
@@ -74,9 +76,11 @@
 
 <h2>教育</h2>
 <dl>
-<dt>2019年4月--</dt>
+<dt>2025年4月--</dt>
+<dd>東京都立大学理学部数理科学科 アルゴリズムA，アルゴリズムA演習</dd>
+<dt>2019年4月--2025年3月</dt>
 <dd>東京大学工学部計数工学科 数理情報工学演習第一A 「解析数理工学演習」</dd>
-<dt>2019年4月--</dt>
+<dt>2019年4月--2025年3月</dt>
 <dd>東京大学工学部計数工学科 数理情報工学実験第二</dd>
 <dt>2019年4月--2020年3月</dt>
 <dd>東京大学工学部計数工学科 計数工学実験 「数値手法」</dd>
