--- a/ja/index.html
+++ b/ja/index.html
@@ -45,13 +45,13 @@
 <h1>佐藤 峻 (Shun Sato)</h1>
 
 <p>
-東京大学大学院情報理工学系研究科 数理情報学専攻 助教
+東京都立大学 大学院理学研究科 数理科学専攻 准教授
 </p>
 
 <p>
-〒113-8656 東京都文京区本郷7-3-1<br>
-東京大学大学院情報理工学系研究科 数理情報学専攻<br>
-Email: shun (at) mist.i.u-tokyo.ac.jp<br>
+〒192-0397 東京都八王子市南大沢1-1<br>
+東京都立大学 大学院理学研究科 数理科学専攻<br>
+Email: shun_sato (at) tmu.ac.jp<br>
 <a href="https://scholar.google.co.jp/citations?user=SnL7aYgAAAAJ&hl=en" class="active">Google Scholar Profile</a>, <a href="https://orcid.org/0000-0002-8938-0825" class="active">ORCID</a>, <a href="https://researchmap.jp/shun_sato_ist?lang=ja" class="active">Researchmap</a>
 </p>
 
