--- a/ja/publications.html
+++ b/ja/publications.html
@@ -51,6 +51,13 @@
 <h2>査読無し論文誌，予稿等</h2>
 <ol id="proc" class="high"></ol>
 
+<h2>書籍</h2>
+<li><b>微分方程式の数値解析とデータサイエンス</b><br>
+  [<a href="https://www.saiensu.co.jp/search/?isbn=978-4-7819-1632-3&y=2025" target="_blank">出版社</a>]
+  [<a href="https://amzn.asia/d/akiWMCM" target="_blank">Amazon</a>]<br>
+  宮武勇登, 佐藤峻, SGCライブラリ199, サイエンス社, 2025. 
+</li>
+
 </div>
 
 
