--- a/ja/links.html
+++ b/ja/links.html
@@ -44,6 +44,7 @@
 
 <h2>リンク</h2>
 <ul>
+<li><a href="https://www.se.tmu.ac.jp/mis/index.html" target="_blank">東京都立大学理学部数理科学科</a></li>
 <li><a href="http://www.sr3.t.u-tokyo.ac.jp" target="_blank">数理3研</a></li>
 <li><a href="http://www.jsiam.org/" target="_blank">日本応用数理学会</a></li>
 </ul>
