--- a/ja/publications.html
+++ b/ja/publications.html
@@ -52,12 +52,18 @@
 <ol id="proc" class="high"></ol>
 
 <h2>書籍</h2>
+<ol>
 <li><b>微分方程式の数値解析とデータサイエンス</b><br>
   [<a href="https://www.saiensu.co.jp/search/?isbn=978-4-7819-1632-3&y=2025" target="_blank">出版社</a>]
   [<a href="https://amzn.asia/d/akiWMCM" target="_blank">Amazon</a>]<br>
   宮武勇登, 佐藤峻, SGCライブラリ199, サイエンス社, 2025. 
 </li>
-
+<li><b>B級数：数値解析の代数的解析</b><br>
+  [<a href="https://www.maruzen-publishing.co.jp/book/b10122585.html" target="_blank">出版社</a>]
+  [<a href="https://amzn.asia/d/299lcVA" target="_blank">Amazon</a>]<br>
+  J.C.ブッチャー (著), 三井斌友 (翻訳), 宮武勇登 (翻訳), 佐藤峻 (翻訳), 丸善出版, 2024. 
+</li>
+</ol>
 </div>
 
 
