--- a/links.html
+++ b/links.html
@@ -44,6 +44,7 @@
 
 <h2>Links</h2>
 <ul>
+<li><a href="https://www.se.tmu.ac.jp/mis/english.html" target="_blank">Department of Mathematical Sciences, Graduate School of Science, Tokyo Metropolitan University</a></li>
 <li><a href="http://www.sr3.t.u-tokyo.ac.jp" target="_blank">Mathematical Informatics 3rd Laboratory</a></li>
 <li><a href="http://www.jsiam.org/en" target="_blank">The Japan Society for Industrial and Applied Mathematics</a></li>
 </ul>
