--- a/ja/publications.html
+++ b/ja/publications.html
@@ -52,7 +52,7 @@
 <ol id="proc" class="high"></ol>
 
 <h2>書籍</h2>
-<ol>
+<ol class="high">
 <li><b>微分方程式の数値解析とデータサイエンス</b><br>
   [<a href="https://www.saiensu.co.jp/search/?isbn=978-4-7819-1632-3&y=2025" target="_blank">出版社</a>]
   [<a href="https://amzn.asia/d/akiWMCM" target="_blank">Amazon</a>]<br>
