--- a/ja/index.html
+++ b/ja/index.html
@@ -76,6 +76,11 @@ Email: shun_sato (at) tmu.ac.jp<br>
 <a href="memo/tikz_pgf.html">TikZ + PGFPlots によるグラフ作成</a>
 </p>
 
+<h2>予定</h2>
+<p>
+<a href="schedule/week.html">週間スケジュール</a>
+</p>
+
 
 </div>
 
