--- a/ja/schedule/week.html
+++ b/ja/schedule/week.html
@@ -103,7 +103,7 @@
     box-shadow:0 2px 4px rgba(0,0,0,0.1);
   }
   .office { background:#74c876; }
-  .leture { background:#ffc773; }
+  .lecture { background:#ffc773; }
   .seminar { background:#fd85ff; }
   .esem { background:#5ce1ff; }
 </style>
