--- a/ja/index.html
+++ b/ja/index.html
@@ -79,6 +79,8 @@ Email: shun_sato (at) tmu.ac.jp<br>
 <h2>予定</h2>
 <p>
 <a href="schedule/week.html">週間スケジュール</a>
+
+<a href="schedule/trips.html">出張予定</a>
 </p>
 
 
