--- a/ja/schedule/trips.html
+++ b/ja/schedule/trips.html
@@ -130,7 +130,7 @@
   }
 
   document.addEventListener("DOMContentLoaded", ()=>{
-    loadTrips("trips.csv");
+    loadTrips("csv/trips.csv");
   });
   </script>
 
