--- a/ja/index.html
+++ b/ja/index.html
@@ -77,11 +77,10 @@ Email: shun_sato (at) tmu.ac.jp<br>
 </p>
 
 <h2>予定</h2>
-<p>
-<a href="schedule/week.html">週間スケジュール</a>
-
-<a href="schedule/trips.html">出張予定</a>
-</p>
+<ul>
+<li> <a href="schedule/week.html">週間スケジュール</a></li>
+<li><a href="schedule/trips.html">出張予定</a></li>
+</ul>
 
 
 </div>
