--- a/ja/schedule/trips.html
+++ b/ja/schedule/trips.html
@@ -80,7 +80,7 @@
   <h1>今後の出張予定</h1>
   <ul class="trip-list" id="trip-list"></ul>
 
-  <h3>(参加未確定のものはグレーで表示)</h3>
+  <p>(参加未確定のものはグレーで表示)</p>
 </div>
 
 <script>
