--- a/ja/schedule/trips.html
+++ b/ja/schedule/trips.html
@@ -78,9 +78,13 @@
 <div id="contents">
 
   <h1>今後の出張予定</h1>
+  <div style="text-align:center">
+    (参加未確定のものはグレーで表示)
+  </div>
+
   <ul class="trip-list" id="trip-list"></ul>
 
-  <p>(参加未確定のものはグレーで表示)</p>
+  
 </div>
 
 <script>
