--- a/ja/schedule/trips.html
+++ b/ja/schedule/trips.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Default-Style" content="text/css">
   <meta http-equiv="Content-Type" content="text/javascript">
   <meta name="keywords" content="shun, sato, 佐藤, 峻">
-<!--  <meta name="viewport" content="width=device-width, initial-scale=1">-->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="../../css/bootstrap.css">
   <link rel="stylesheet" type="text/css" href="../../css/style.css">
   <title>出張予定 | Shun Sato</title>
@@ -17,7 +17,7 @@
     }
     h1 { text-align:center; margin-bottom:20px; }
     .trip-list {
-      max-width: 600px;
+      max-width: 800px;
       margin: 0 auto;
       padding: 0;
       list-style: none;
@@ -31,7 +31,7 @@
     }
     .trip-item h3 {
       margin: 0 0 6px;
-      font-size: 3rem;
+      font-size: 2.5rem;
     }
     .trip-item p {
       margin: 2px 0;
