--- a/ja/schedule/week.html
+++ b/ja/schedule/week.html
@@ -97,7 +97,7 @@
     color:#fff;
     border-radius:6px;
     padding:4px 6px;
-    font-size:1.4rem;
+    font-size: clamp(0.7rem, 1.5vw, 1.5rem);
     line-height:1.3;
     box-shadow:0 2px 4px rgba(0,0,0,0.1);
   }
