--- a/ja/schedule/trips.html
+++ b/ja/schedule/trips.html
@@ -31,11 +31,11 @@
     }
     .trip-item h3 {
       margin: 0 0 6px;
-      font-size: 2rem;
+      font-size: clamp(1rem, 2vw, 2rem);
     }
     .trip-item p {
       margin: 2px 0;
-      font-size: 1.6rem;
+      font-size: clamp(0.8rem, 1.6vw, 1.6rem);
     }
     .pending {
       opacity: 0.6;
