--- a/ja/memo/tikz_pgf.html
+++ b/ja/memo/tikz_pgf.html
@@ -32,6 +32,7 @@
         <li><a href="../../ja">Home</a></li>
         <li><a href="../../ja/cv.html">CV</a></li>
         <li><a href="../../ja/publications.html">Publications</a></li>
+        <li><a href="../../ja/talks.html">Talks</a></li>
         <li><a href="../../ja/links.html">Links</a></li>
         <li><a href="../../" role="button" class="btn btn-info">English</a></li>
       </ul>
