--- a/ja/schedule/trips.html
+++ b/ja/schedule/trips.html
@@ -101,7 +101,10 @@
       return obj;
     });
 
-    const today = new Date();
+    // 今日の日付（0時）を基準にする
+    const now = new Date();
+    const today = new Date(now.getFullYear(), now.getMonth(), now.getDate());
+
 
     // 今後（今日終了のもの含む）のみ
     const upcoming = data.filter(ev => new Date(ev.end) >= today);
